XMLHttpRequest should not prevent entering the back/forward cache https://bugs.webkit.org/show_bug.cgi?id=203107 <rdar://problem/56438647>

Reviewed by Youenn Fablet.

LayoutTests/imported/w3c:

Rebaseline a new WPT tests that are passing now that we properly check that the
Document is fully active in open().

* web-platform-tests/xhr/open-url-multi-window-2-expected.txt:
* web-platform-tests/xhr/open-url-multi-window-5-expected.txt:
* web-platform-tests/xhr/open-url-multi-window-6-expected.txt:

Source/WebCore:

Improve XMLHttpRequest for back/forward cache suspension:
1. We no longer cancel pending loads in the suspend() method as this may
   fire events.
2. Simplify XMLHttpRequestProgressEventThrottle to use SuspendableTimers
   to dispatch events that are deferred by suspension or throttling.

Test: http/tests/navigation/page-cache-xhr-in-loading-iframe.html

* xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::XMLHttpRequest):
(WebCore::XMLHttpRequest::open):
Add check to throw a InvalidStateError if the associated document is not fully active,
as per https://xhr.spec.whatwg.org/#dom-xmlhttprequest-open (Step 2). This avoids
dispatching events after ActiveDOMObject::stop() has been called and brings a few more
passes on WPT tests.

(WebCore::XMLHttpRequest::dispatchEvent):
(WebCore::XMLHttpRequest::suspend):
(WebCore::XMLHttpRequest::resume):
(WebCore::XMLHttpRequest::shouldPreventEnteringBackForwardCache_DEPRECATED const): Deleted.
(WebCore::XMLHttpRequest::resumeTimerFired): Deleted.
* xml/XMLHttpRequest.h:
* xml/XMLHttpRequestProgressEventThrottle.cpp:
(WebCore::XMLHttpRequestProgressEventThrottle::XMLHttpRequestProgressEventThrottle):
(WebCore::XMLHttpRequestProgressEventThrottle::dispatchThrottledProgressEvent):
(WebCore::XMLHttpRequestProgressEventThrottle::dispatchReadyStateChangeEvent):
(WebCore::XMLHttpRequestProgressEventThrottle::dispatchEventWhenPossible):
(WebCore::XMLHttpRequestProgressEventThrottle::dispatchProgressEvent):
(WebCore::XMLHttpRequestProgressEventThrottle::flushProgressEvent):
(WebCore::XMLHttpRequestProgressEventThrottle::dispatchDeferredEventsAfterResuming):
(WebCore::XMLHttpRequestProgressEventThrottle::dispatchThrottledProgressEventTimerFired):
(WebCore::XMLHttpRequestProgressEventThrottle::suspend):
(WebCore::XMLHttpRequestProgressEventThrottle::resume):
(WebCore::XMLHttpRequestProgressEventThrottle::dispatchEvent): Deleted.
(WebCore::XMLHttpRequestProgressEventThrottle::dispatchDeferredEvents): Deleted.
(WebCore::XMLHttpRequestProgressEventThrottle::fired): Deleted.
(WebCore::XMLHttpRequestProgressEventThrottle::hasEventToDispatch const): Deleted.
* xml/XMLHttpRequestProgressEventThrottle.h:

LayoutTests:

Add more test coverage.

* TestExpectations:
* fast/dom/xmlhttprequest-constructor-in-detached-document-expected.txt:
* fast/xmlhttprequest/xmlhttprequest-open-after-iframe-onload-remove-self.html:
* http/tests/navigation/page-cache-xhr-in-loading-iframe-expected.txt: Added.
* http/tests/navigation/page-cache-xhr-in-loading-iframe.html: Added.
* http/tests/navigation/resources/page-cache-xhr-in-loading-iframe.html: Added.

Canonical link: https://commits.webkit.org/216604@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251366 268f45cc-cd09-0410-ab3c-d52691b4dbfc